# kubernetes-truenas-democratic-tool

./: .dockerignore  .gitignore  .golangci.yml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Makefile  README.md  README_DEPLOYMENT.md  RELEASE_CHECKLIST.md  config.go.example  config.yaml.example  quick-start.sh  test-ci.sh  validate-deployment.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-minimal.yml  ci-testing.yml  ci.yml  codeql.yml  deploy.yml  performance.yml  release.yml  security.yml
.kiro/specs/core-monitoring/: design.md  requirements.md  tasks.md
deploy/container/: Containerfile.api  Containerfile.cli
deploy/docker/: Dockerfile.api  Dockerfile.cli  Dockerfile.controller  Dockerfile.monitor
deploy/kubernetes/: api-deployment.yaml  api-server-deployment.yaml  configmap.yaml  ingress.yaml  monitor-deployment.yaml  namespace.yaml  rbac.yaml  secret.yaml  servicemonitor.yaml  services.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  GO_COMPONENTS.md  PRD.md  PROMETHEUS_METRICS.md  api-endpoints.md  config-compatibility.md  go-vs-python-comparison.md
docs/superpowers/: backlog.md
docs/superpowers/plans/: 2026-05-28-repo-health-remediation.md  2026-05-30-pr-9-config-perf-observability.md  2026-05-31-pr-10-inventory-cache.md
docs/superpowers/specs/: 2026-05-28-pr-1-security-baseline-design.md  2026-05-28-pr-2-python-correctness-design.md  2026-05-28-pr-3-python-import-hygiene-design.md  2026-05-28-pr-4-api-honesty-design.md  2026-05-28-pr-5-detector-validation-design.md  2026-05-28-pr-6-reliability-performance-design.md  2026-05-28-pr-7-test-ci-alignment-design.md  2026-05-28-pr-8-docs-accuracy-design.md  (+8 more)
go/: GO_IMPLEMENTATION_STATUS.md  go.mod  go.sum
python/: DEMO.md  README.md  pyproject.toml  pytest.ini  requirements-cli.txt  requirements-dev.txt  requirements.txt  run_integration_tests.py  run_unit_tests.py  test-config.yaml  test_snapshot_functionality.py
python/tests/: __init__.py
python/tests/integration/: test_cli_workflows.py  test_kubernetes_real.py  test_real_functionality.py  test_truenas_api.py
python/tests/unit/: __init__.py  test_cli.py  test_config.py  test_import_hygiene.py  test_inventory_cache.py  test_k8s_client.py  test_metrics.py  test_monitor.py  test_observability.py  test_time_utils.py  test_truenas_client.py
python/truenas_storage_monitor/: __init__.py  analyzer.py  cli.py  config.py  exceptions.py  inventory_cache.py  k8s_client.py  metrics.py  monitor.py  observability.py  prometheus_metrics.py  time_utils.py  truenas_client.py
scripts/: ci-precheck.sh
shared/schemas/: config-validation.json  orphaned-resources.json  storage-analysis.json  validator.py
tests/integration/: __init__.py  conftest.py  test_end_to_end.py  test_k8s_integration.py  test_truenas_integration.py
(+44 files in other folders)
